Fix HA lease-starvation false-demote: demote-on-proof election, admission fencing, fail-closed replication
Under saturating load the healthy PRIMARY false-demoted (renewal starvation +
demote-on-first-failure), causing leaderless gaps with 100k+ failed orders per
bench run. GC was ruled out by measurement (max STW 157ms vs 5s window).

- LeaderElection: demote only on proof (foreign holderIdentity or 10s renew
  deadline); single optimistic PUT with cached resourceVersion; 2s HTTP
  timeouts; heartbeat on its own thread (a slow renewal no longer silences
  it); pod-GET fast path keeps real-kill failover ~2-3s despite the 15s
  lease; timing contract env-tunable (15/10/2/2).
- LmaxEngine: synchronous admission gate at the ring claim (single-writer
  boundary, STW-wakeup-safe); three fail-open-to-PRIMARY paths closed
  (NATS-down, startup JetStream fail, post-promotion replicator fail all now
  stay FOLLOWER/REFUSING); background backoff recovery loop re-establishes
  replication without a pod restart.
- OrderMatcherService: NotPrimaryException -> 503; blp_lease_* /
  blp_demote_total election-health metrics.
- StatefulSet: election env vars + SERVER_TOMCAT_THREADS_MAX=16.
- Docs: LMAX-BLP-FAILOVER.md rewritten for the new contract (+ §10 incident
  record); YU02 quickstart HA failover test; TD-LK03 resolved.